# consentchain

./: BUILD_CONTRACT.md  CLAUDE.md  HANDOFF.md  MASTER_PROJECT_INVENTORY.json  MASTER_PROJECT_INVENTORY.md  README.md  STATUS.json  STATUS.md  component-inventory.json  last-session-transcript.jsonl  local-only-vs-remote.txt  openmemory.md  package.json  pnpm-lock.yaml  safety-fellows-session.jsonl  safety-fellows-transcript-readable.md  session-transcript-readable.md  tsconfig.json
Projects/proactive-gitlab-agent/: .gitignore  LICENSE  README.md  pyproject.toml
Projects/proactive-gitlab-agent/.gitlab/duo/prompts/: proactive-system-prompt.md
Projects/proactive-gitlab-agent/remotion/: package-lock.json  package.json
Projects/proactive-gitlab-agent/remotion/src/: Root.tsx  Video.tsx  styles.ts
Projects/proactive-gitlab-agent/remotion/src/scenes/: DemoScene.tsx  EvidenceScene.tsx  OriginScene.tsx  ProblemScene.tsx  VisionScene.tsx
Projects/proactive-gitlab-agent/src/proactive/: __init__.py  cli.py  validator.py
Projects/proactive-gitlab-agent/tests/: test_cli.py  test_validator.py
app/: layout.tsx  page.old.tsx
component-inventory/: COMPONENTS.md  component-inventory.graph.json  component-inventory.index.json
config/: projects.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENT_PROTOCOL.md  ENVIRONMENT_VARIABLES.md  HANDBOOK.md  QUICK_START.md  README.md  SECURITY.md  TROUBLESHOOTING.md  audio-experience.md
scripts/: bootstrap_repo.sh  verify_governance_chain.py
verification/: GOVERNANCE_SYSTEM_CARD.md  MATRIX.md  tip-state-policy.json
(+257 files in other folders)
